clang/test/BSC/Negative/Ownership/Borrow/borrow_check_rules/cstyle_cast_in_callexpr/cstyle_cast_in_callexpr.cbs
// RUN: %clang_cc1 -verify %s

int *_Borrow foo(int *_Borrow p, int *_Borrow q);

void test(int *p) {
  int *_Borrow m = foo((int *_Borrow)p, (int *_Borrow)p); // expected-error {{cannot borrow `*p` as mutable more than once at a time}} // expected-note {{first mut borrow occurs here}}                              
  *m = 2;
} 